--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1289,7 +1289,7 @@
     "\n",
     "<img src='./Notes_Images/desmos_xor.png'>\n",
     "\n",
-    "This shows that `XOR` needs two half-planes rather than one.\n",
+    "This shows that `XOR` needs two half-planes rather than one. And the **decision boundary** is the intersection of these two half-planes not a single straight line which means we found the non-linear decision boundary.\n",
     "\n",
     "<hr>\n",
     "\n",
@@ -1361,7 +1361,160 @@
     "\n",
     "We can see here, we are only misclassifying one data point. It's better but not perfect, and that's what we are looking for.\n",
     "\n",
-    "That is the whole point of training a neural network: to minimize misclassifications and improve accuracy.\n"
+    "That is the whole point of training a neural network: to minimize misclassifications and improve accuracy.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "There are three situations:\n",
+    "\n",
+    "**Underfitting** occurs when the model is too simple to capture the underlying patterns in the data. This can happen if the model has too few parameters or if it is not trained long enough. Underfitting results in high training and validation errors.\n",
+    "\n",
+    "**Overfitting** occurs when the model is too complex and learns the noise in the training data instead of the actual patterns. For the training data, this means the model performs well (low error) but fails to generalize to new, unseen data (high error).\n",
+    "\n",
+    "Or for the data that are close to the decision boundary, the model may become overly sensitive to small fluctuations in the input, leading to erratic predictions.\n",
+    "\n",
+    "**Good fitting** occurs when the model is able to generalize well to unseen data. This is the desired outcome of the training process, where the model achieves a balance between bias and variance.\n",
+    "\n",
+    "<img src='./Notes_Images/triad_nn.png'>\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "### **Datasets**\n",
+    "\n",
+    "For training we need data and dataset is a collection of examples used to train the model. Each example consists of input features and the corresponding target output.\n",
+    "\n",
+    "We teach the network by showing samples to it. The `Neural Network` learns with each feature-label pair.\n",
+    "\n",
+    "We split the datasets into three parts:\n",
+    "\n",
+    "**Training** : This subset is used to train the model. The model learns from this data by adjusting its weights based on the input-output pairs.\n",
+    "\n",
+    "**Validation** : This subset is used to tune the model's hyperparameters and prevent overfitting. The model is evaluated on this data during training, but it does not learn from it.\n",
+    "\n",
+    "**Testing** : This subset is used to assess the model's performance after training is complete. The model makes predictions on this data, and its accuracy is measured.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "So we the data with which the `Network` learns is only the `Training` set. Other subsets are used asserting the model's performance and generalization ability.\n",
+    "\n",
+    "We've to run the `Training` set lots of times to allow the model to learn effectively. Each such run is called an `Epoch`. We stop after some number of `Epochs` when we see that the model's performance on the validation set is no longer improving.\n",
+    "\n",
+    "After running `Training` dataset for some `epochs` the `Network` would have learned something therefore, we can evaluate the model's performance on the `Validation` set to see how well it generalizes to unseen dat and compared to other competitors.\n",
+    "\n",
+    "Also, while `Training` the data we use multiple `Architecture` and `Techniques`. The best performing model on the validation set is selected for further evaluation on the test set.\n",
+    "\n",
+    "<img src='./Notes_Images/rank.png'>\n",
+    "\n",
+    "Lastly, the model's performance on the test set is evaluated to get an unbiased estimate of its generalization ability. This is crucial for understanding how well the model will perform in real-world scenarios.\n",
+    "\n",
+    "### **What Happens When we Train One Single Training Sample?**\n",
+    "\n",
+    "First we feed an input sample `X` to the `Network`.\n",
+    "\n",
+    "Then compare the output to the correct value of `Y`.\n",
+    "\n",
+    "Calculate the error.\n",
+    "\n",
+    "Use this error to adjust the weights of the network through backpropagation.\n",
+    "\n",
+    "<hr>\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81786e17",
+   "metadata": {},
+   "source": [
+    "## **Training Error Functions**\n",
+    "\n",
+    "An error function measures how bad a model's predictions are compared to the actual target values. It quantifies the difference between the predicted output and the true output, providing a way to assess the model's performance during training.\n",
+    "\n",
+    "The `Error Function` is a crucial component in training neural networks, as it guides the optimization process. By minimizing the error function, we can improve the model's predictions and overall performance.\n",
+    "\n",
+    "We use a training process called `Gradient Descent` to minimize the error function.\n",
+    "\n",
+    "Also, we use two error metrics i.e. the `Output Error` for the individual predictions and the `Overall Error` which is also known as the `Loss Function`.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "### **Output Error()**\n",
+    "\n",
+    "The **Output Error** measures the difference between the predicted output of the network and the actual target output for a single training example. It provides a way to assess how well the network is performing on individual predictions.\n",
+    "\n",
+    "Mathematically, the output error for a single example can be defined as:\n",
+    "\n",
+    "$$\n",
+    "E = \\frac{1}{2} (y - \\hat{y})^2\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- \\(y\\) is the true output (target value)\n",
+    "- $\\hat{y}$ is the predicted output (network's output)\n",
+    "\n",
+    "The factor of $\\tfrac{1}{2}$ is included for convenience, as it simplifies the derivative calculation during backpropagation.\n",
+    "\n",
+    "The output error is used to compute the gradients for updating the weights in the network. By minimizing the output error for each training example, we can improve the network's performance on that specific example.\n",
+    "\n",
+    "### **Overall Error (Loss Function)**\n",
+    "\n",
+    "The **Overall Error**, also known as the **Loss Function**, measures the average error across all training examples. It provides a single scalar value that represents the model's performance on the entire training dataset.\n",
+    "\n",
+    "Mathematically, the overall error can be defined as:\n",
+    "\n",
+    "Or\n",
+    "\n",
+    "`Mean Squared Error (MSE)`\n",
+    "\n",
+    "$$\n",
+    "E_{overall} = \\frac{1}{N} \\sum_{i=1}^{N} E_i\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- \\(N\\) is the total number of training examples\n",
+    "- \\(E_i\\) is the output error for the \\(i\\)-th training example\n",
+    "\n",
+    "The overall error is used to guide the optimization process during training. By minimizing the overall error, we can improve the model's performance across all training examples.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "The advantage of using `Mean Squared Error (MSE)` as the overall error metric is that it penalizes larger errors more heavily than smaller ones. This is because the errors are squared before being averaged, which means that outliers have a greater impact on the overall error value. This property makes MSE a useful metric for tasks where large errors are particularly undesirable.\n",
+    "\n",
+    "Also, MSE is differentiable, which is a key requirement for optimization algorithms like gradient descent. The smooth nature of the MSE curve allows for more stable and efficient convergence during training.\n",
+    "\n",
+    "Also, `MSE` gets rid of `Sign` of the actual error. So, when minimizing the error, the model does not have to worry about the direction of the error (positive or negative), only the magnitude.\n",
+    "\n",
+    "The main purpose is to find how big or small the error is, regardless of its direction.\n",
+    "\n",
+    "### **Gradient Descent**\n",
+    "\n",
+    "Gradient Descent is an optimization algorithm used to minimize the error function by iteratively updating the model's parameters (weights and biases). The basic idea is to compute the gradient (or derivative) of the error function with respect to the model's parameters and then adjust the parameters in the opposite direction of the gradient.\n",
+    "\n",
+    "The update rule for a single parameter \\(w\\) can be expressed as:\n",
+    "\n",
+    "$$\n",
+    "w = w - \\eta \\frac{\\partial E_{overall}}{\\partial w}\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- \\(w\\) is the model parameter (weight or bias)\n",
+    "- \\(\\eta\\) is the learning rate (a small positive scalar)\n",
+    "- \\(\\frac{\\partial E_{overall}}{\\partial w}\\) is the gradient of the overall error with respect to the parameter \\(w\\)\n",
+    "\n",
+    "The learning rate controls the step size of the update. If the learning rate is too large, the optimization process may overshoot the minimum and diverge. If it is too small, the convergence may be slow.\n",
+    "\n",
+    "Gradient Descent can be applied in different variants, such as:\n",
+    "\n",
+    "1. **Batch Gradient Descent**: Computes the gradient using the entire training dataset. This can be computationally expensive for large datasets.\n",
+    "\n",
+    "2. **Stochastic Gradient Descent (SGD)**: Computes the gradient using a single training example at a time. This introduces noise into the optimization process but can lead to faster convergence.\n",
+    "\n",
+    "3. **Mini-Batch Gradient Descent**: Computes the gradient using a small batch of training examples. This strikes a balance between the efficiency of Batch Gradient Descent and the speed of Stochastic Gradient Descent.\n",
+    "\n",
+    "The goal of Gradient Descent is to find the optimal set of parameters that minimize the overall error, leading to better model performance on unseen data.\n"
    ]
   }
  ],
