docs: gradient des

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1473,7 +1473,7 @@
     "\n",
     "Where:\n",
     "\n",
-    "- \\(N\\) is the total number of training examples\n",
+    "- `N` is the total number of training examples\n",
     "- \\(E_i\\) is the output error for the \\(i\\)-th training example\n",
     "\n",
     "The overall error is used to guide the optimization process during training. By minimizing the overall error, we can improve the model's performance across all training examples.\n",
@@ -1486,8 +1486,14 @@
     "\n",
     "Also, `MSE` gets rid of `Sign` of the actual error. So, when minimizing the error, the model does not have to worry about the direction of the error (positive or negative), only the magnitude.\n",
     "\n",
-    "The main purpose is to find how big or small the error is, regardless of its direction.\n",
-    "\n",
+    "The main purpose is to find how big or small the error is, regardless of its direction.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5c9e904",
+   "metadata": {},
+   "source": [
     "### **Gradient Descent**\n",
     "\n",
     "Gradient Descent is an optimization algorithm used to minimize the error function by iteratively updating the model's parameters (weights and biases). The basic idea is to compute the gradient (or derivative) of the error function with respect to the model's parameters and then adjust the parameters in the opposite direction of the gradient.\n",
@@ -1500,21 +1506,21 @@
     "\n",
     "Where:\n",
     "\n",
-    "- \\(w\\) is the model parameter (weight or bias)\n",
-    "- \\(\\eta\\) is the learning rate (a small positive scalar)\n",
-    "- \\(\\frac{\\partial E_{overall}}{\\partial w}\\) is the gradient of the overall error with respect to the parameter \\(w\\)\n",
+    "- $ w $ is the model parameter (weight or bias)\n",
+    "\n",
+    "- $ \\eta\\ $ is the learning rate (a small positive scalar)\n",
+    "\n",
+    "- $ \\frac{\\partial E\\_{overall}}{\\partial w}\\ $ is the gradient of the overall error with respect to the parameter \\(w\\)\n",
     "\n",
     "The learning rate controls the step size of the update. If the learning rate is too large, the optimization process may overshoot the minimum and diverge. If it is too small, the convergence may be slow.\n",
     "\n",
-    "Gradient Descent can be applied in different variants, such as:\n",
+    "<hr>\n",
     "\n",
-    "1. **Batch Gradient Descent**: Computes the gradient using the entire training dataset. This can be computationally expensive for large datasets.\n",
+    "### **Understanding with Graph**\n",
     "\n",
-    "2. **Stochastic Gradient Descent (SGD)**: Computes the gradient using a single training example at a time. This introduces noise into the optimization process but can lead to faster convergence.\n",
+    "Suppose we've a Network with several weights but for now let's try to study how changing single weight affects the overall error.\n",
     "\n",
-    "3. **Mini-Batch Gradient Descent**: Computes the gradient using a small batch of training examples. This strikes a balance between the efficiency of Batch Gradient Descent and the speed of Stochastic Gradient Descent.\n",
-    "\n",
-    "The goal of Gradient Descent is to find the optimal set of parameters that minimize the overall error, leading to better model performance on unseen data.\n"
+    "<img src='./Mptes_Images/gradient_des.png'>\n"
    ]
   }
  ],
