docs: gradient des

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1520,7 +1520,9 @@
     "\n",
     "Suppose we've a Network with several weights but for now let's try to study how changing single weight affects the overall error.\n",
     "\n",
-    "<img src='./Mptes_Images/gradient_des.png'>\n"
+    "<img src='./Notes_Images/gradient_des.png'>\n",
+    "\n",
+    "In the graph above, we can see how the overall error changes as we adjust a single weight in the network. The x-axis represents the weight value, while the y-axis represents the overall error.\n"
    ]
   }
  ],
