docs: gradient des

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1522,7 +1522,29 @@
     "\n",
     "<img src='./Notes_Images/gradient_des.png'>\n",
     "\n",
-    "In the graph above, we can see how the overall error changes as we adjust a single weight in the network. The x-axis represents the weight value, while the y-axis represents the overall error.\n"
+    "In the graph above, say at any point in training the Weight \\(w\\) is at position \\(x\\) on the x-axis. The corresponding overall error is at position \\(y\\) on the y-axis. As we adjust the weight \\(w\\), we can see how the overall error changes.\n",
+    "\n",
+    "We see that we'll need to increase the weight \\(w\\) to reduce the overall error \\(E\\_{overall}\\) i.e. we reach the `Global Minimum`.\n",
+    "\n",
+    "This is the lowest error we can get by modifying the weight \\(w\\) in the direction that reduces the overall error.\n",
+    "\n",
+    "**But,**\n",
+    "\n",
+    "What if the `Weight` is at a Local Minimum? As show in the image below:\n",
+    "\n",
+    "<img src='./Notes_Images/local_minimum.png'>\n",
+    "\n",
+    "As we will initialize the weights randomly, there's a possibility that the weight \\(w\\) could start at a local minimum. In such cases, the gradient descent algorithm may not be able to escape the `local minimum` and find the global minimum.\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "This was the case for a `Single Weight`, but in real neural networks, we have many weights and biases. The optimization landscape becomes much more complex, with many local minima and saddle points. This makes it challenging for gradient descent to find the global minimum.\n",
+    "\n",
+    "For example, let's say we are modifying two weights to manipulate the error. This would give us a `3D` plot where the height is the error and `two weights` will place the marble at different points in this surface with mountains and valley. The object is to find the lowest point in this 3D landscape, which corresponds to the minimum error.\n",
+    "\n",
+    "Below is the `Graph`:\n",
+    "\n",
+    "<img src='./Notes_Images/3d_grad.png'>\n"
    ]
   }
  ],
