docs: grad des cont

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1544,7 +1544,11 @@
     "\n",
     "Below is the `Graph`:\n",
     "\n",
-    "<img src='./Notes_Images/3d_grad.png'>\n"
+    "<img src='./Notes_Images/3d_grad.png'>\n",
+    "\n",
+    "It becomes more complex as we add more weights and biases, creating a high-dimensional optimization landscape. In this space, the gradient descent algorithm must navigate through various local minima and saddle points to find the global minimum.\n",
+    "\n",
+    "So, with `Two Weights` it became a `3D` optimization problem. Similiarly, for our `XOR` problem we would have a `10D` optimization problem as we've `9 Weights` which we cannot event understand graphically.\n"
    ]
   }
  ],
