docs: grad des cont

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1491,6 +1491,104 @@
   },
   {
    "cell_type": "markdown",
+   "id": "192f4ab8",
+   "metadata": {},
+   "source": [
+    "### **Delta Rule**\n",
+    "\n",
+    "It is a simple update formula for adjusting the weights in a neuron. We add the product of the learning rate, the error term, and the input to the weight.\n",
+    "\n",
+    "**Considers the Following Value**\n",
+    "\n",
+    "- The output error\n",
+    "\n",
+    "- One Input\n",
+    "\n",
+    "- Learning rate factor.\n",
+    "\n",
+    "Mathematically, it can be expressed as:\n",
+    "\n",
+    "$$\n",
+    "\\Delta w = \\eta \\cdot (d - y) \\cdot x\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- $ \\Delta w $ is the change in weight\n",
+    "\n",
+    "- $ \\eta $ is the learning rate\n",
+    "\n",
+    "- $ d $ is the desired output\n",
+    "\n",
+    "- $ y $ is the actual output\n",
+    "\n",
+    "- $ x $ is the input\n",
+    "\n",
+    "This rule helps the model learn from its mistakes by adjusting the weights in the direction that reduces the error.\n",
+    "\n",
+    "**Output Error**\n",
+    "\n",
+    "The `output error` will be `positive` if the predicted output is higher than the desired output and `negative` if it is lower. This means that when we later update the `Weight`, it will contribute to making the output closer to the desired value.\n",
+    "\n",
+    "**Summary**\n",
+    "\n",
+    "- **The Delta Rule is a _special case_ of Gradient Descent.**\n",
+    "- Specifically, it’s (stochastic) gradient descent on a **single linear neuron** using **squared-error loss**.\n",
+    "\n",
+    "Below is the clean picture,\n",
+    "\n",
+    "Assume a single neuron with linear activation:\n",
+    "$y = w^\\top x$\n",
+    "\n",
+    "Use the per-example squared error:\n",
+    "$E = \\tfrac12(d - y)^2$\n",
+    "\n",
+    "Take the gradient w\\.r.t. $w$:\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial E}{\\partial w}\n",
+    "= \\frac{\\partial}{\\partial w}\\tfrac12(d - w^\\top x)^2\n",
+    "= -(d - y)\\,x\n",
+    "$$\n",
+    "\n",
+    "One **gradient descent** step does:\n",
+    "\n",
+    "$$\n",
+    "w \\leftarrow w - \\eta \\frac{\\partial E}{\\partial w}\n",
+    "= w + \\eta(d - y)\\,x\n",
+    "$$\n",
+    "\n",
+    "which is exactly the **Delta Rule** you wrote:\n",
+    "\n",
+    "$$\n",
+    "\\Delta w = \\eta(d - y)\\,x.\n",
+    "$$\n",
+    "\n",
+    "So, the delta rule = “do (stochastic) gradient descent on a linear unit with MSE.”\n",
+    "\n",
+    "Gradient Descent is the general recipe:\n",
+    "\n",
+    "$$\n",
+    "w \\leftarrow w - \\eta\\,\\frac{\\partial E_{\\text{overall}}}{\\partial w}\n",
+    "$$\n",
+    "\n",
+    "where:\n",
+    "\n",
+    "- the **model** can be anything differentiable (linear, logistic, deep nets, …),\n",
+    "- the **loss** can be anything differentiable (MSE, cross-entropy, etc.),\n",
+    "- and you can update **per example** (SGD), **per mini-batch**, or **full-batch**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22d0bd3f",
+   "metadata": {},
+   "source": [
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5c9e904",
    "metadata": {},
    "source": [
@@ -1549,6 +1647,52 @@
     "It becomes more complex as we add more weights and biases, creating a high-dimensional optimization landscape. In this space, the gradient descent algorithm must navigate through various local minima and saddle points to find the global minimum.\n",
     "\n",
     "So, with `Two Weights` it became a `3D` optimization problem. Similiarly, for our `XOR` problem we would have a `10D` optimization problem as we've `9 Weights` which we cannot event understand graphically.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb64e01",
+   "metadata": {},
+   "source": [
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7bfc5a0",
+   "metadata": {},
+   "source": [
+    "## **Types of Gradient Descent**\n",
+    "\n",
+    "There are different types of `Gradient Descent` algorithms, each with its own characteristics and use cases:\n",
+    "\n",
+    "1. **Batch Gradient Descent**: Computes the gradient using the entire dataset. It provides a stable estimate of the gradient but can be slow and memory-intensive for large datasets.\n",
+    "\n",
+    "2. **Stochastic Gradient Descent (SGD)**: Computes the gradient using a single randomly chosen example. It is faster and can escape local minima but introduces noise into the optimization process.\n",
+    "\n",
+    "3. **Mini-Batch Gradient Descent**: Combines the advantages of both batch and stochastic gradient descent by using a small random subset (mini-batch) of the data to compute the gradient. It strikes a balance between speed and stability.\n",
+    "\n",
+    "4. **Momentum**: An extension of SGD that accumulates a velocity vector in the direction of the gradient, helping to accelerate convergence and reduce oscillations.\n",
+    "\n",
+    "5. **Adaptive Learning Rate Methods**: Algorithms like AdaGrad, RMSProp, and Adam adjust the learning rate for each parameter based on past gradients, allowing for more efficient training.\n",
+    "\n",
+    "6. **Nesterov Accelerated Gradient (NAG)**: A variant of momentum that looks ahead at the future position of the parameters, providing a more accurate gradient estimate.\n",
+    "\n",
+    "Each of these methods has its own strengths and weaknesses, and the choice of which to use depends on the specific problem and dataset.\n",
+    "\n",
+    "<hr>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c762919",
+   "metadata": {},
+   "source": [
+    "## **Backpropagation**\n",
+    "\n",
+    "`Backpropagation` is a supervised learning algorithm used for training artificial neural networks. It is a form of gradient descent that computes the gradient of the `loss function` with respect to each `weight` by the chain rule, allowing for efficient weight updates.\n",
+    "\n",
+    "<hr>\n"
    ]
   }
  ],
