docs: backpropagation cont

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1692,6 +1692,8 @@
     "\n",
     "`Backpropagation` is a supervised learning algorithm used for training artificial neural networks. It is a form of gradient descent that computes the gradient of the `loss function` with respect to each `weight` by the chain rule, allowing for efficient weight updates.\n",
     "\n",
+    "This algorithm will update the `Weights` throughout the network.\n",
+    "\n",
     "<hr>\n"
    ]
   }
