docs: backpropagation cont

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -19,7 +19,17 @@
     "\n",
     "### **The Mathematics Behind Neural Network**\n",
     "\n",
-    "[Maths_Behind_Neural_Network](https://www.youtube.com/watch?v=Ixl3nykKG9M)\n"
+    "[Maths_Behind_Neural_Network](https://www.youtube.com/watch?v=Ixl3nykKG9M)\n",
+    "\n",
+    "### **Mathematics of Backpropagation**\n",
+    "\n",
+    "[Krish_Naik_Playlist](https://m.youtube.com/watch?v=CRB266Eyjkg&pp=ygUoYmFja3Byb3BhZ2F0aW9uIGluIG5ldXJhbCBuZXR3b3JrcyBtYXRocw%3D%3D#)\n",
+    "\n",
+    "### **Vanishing Gradient Descent**\n",
+    "\n",
+    "[Krish_Naik_Playlist](https://m.youtube.com/watch?v=JIWXbzRXk1I&t=627s)\n",
+    "\n",
+    "The derivative of `Sigmoid` lies between `0` and `0.25`. Therefore, the gradient becomes very small, effectively preventing weights from changing their values, which is known as the **Vanishing Gradient Problem**.\n"
    ]
   },
   {
@@ -1694,7 +1704,11 @@
     "\n",
     "This algorithm will update the `Weights` throughout the network.\n",
     "\n",
-    "<hr>\n"
+    "[Krish_Naik_Playlist_Backpropagation_Maths](https://m.youtube.com/watch?v=CRB266Eyjkg&pp=ygUoYmFja3Byb3BhZ2F0aW9uIGluIG5ldXJhbCBuZXR3b3JrcyBtYXRocw%3D%3D#)\n",
+    "\n",
+    "<hr>\n",
+    "\n",
+    "### **Step wise Step in Backpropagation**\n"
    ]
   }
  ],
