docs: backpropagation cont

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1708,7 +1708,33 @@
     "\n",
     "<hr>\n",
     "\n",
-    "### **Step wise Step in Backpropagation**\n"
+    "### **Step wise Step in Backpropagation**\n",
+    "\n",
+    "1. **Forward Pass**: Compute the output of the network by passing the input through all layers.\n",
+    "\n",
+    "<img src='./Notes_Images/feed.png'>\n",
+    "\n",
+    "2. **Compute Loss**: Calculate the loss using a loss function (e.g., Mean Squared Error). The loss might be calculated per sample or as a batch.\n",
+    "\n",
+    "If the loss is calculated per sample, the gradient descent algorithm used is called **Stochastic Gradient Descent (SGD)**.\n",
+    "\n",
+    "If the loss is calculated as a batch, the algorithm used is called **Batch Gradient Descent**.\n",
+    "\n",
+    "If the loss is calculated over multiple batches, the algorithm is referred to as **Mini-Batch Gradient Descent**.\n",
+    "\n",
+    "If the loss is calculated over the entire dataset, the algorithm is called **Full-Batch Gradient Descent**.\n",
+    "\n",
+    "<img src='./Notes_Images/loss.png'>\n",
+    "\n",
+    "3. **Calculate Output Error(Delta Term)/Backward Pass**:\n",
+    "\n",
+    "The `Delta Term` is the derivative of the loss with respect to the output of the network. It represents how much the output of the network needs to change in order to reduce the loss.\n",
+    "\n",
+    "<img src='./Notes_Images/output_error.png'>\n",
+    "\n",
+    "4. **Backward Pass**: Compute the gradient of the loss with respect to each weight using the chain rule.\n",
+    "\n",
+    "5. **Update Weights**: Adjust the weights using the computed gradients and a learning rate.\n"
    ]
   }
  ],
