docs: backpropagation cont

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1732,9 +1732,13 @@
     "\n",
     "<img src='./Notes_Images/output_error.png'>\n",
     "\n",
-    "4. **Backward Pass**: Compute the gradient of the loss with respect to each weight using the chain rule.\n",
+    "<img src='./Notes_Images/delta_rule.png'>\n",
     "\n",
-    "5. **Update Weights**: Adjust the weights using the computed gradients and a learning rate.\n"
+    "Use the chain rule to compute the gradient of the loss with respect to each weight.\n",
+    "\n",
+    "4. **Update Weights**: Adjust the weights using the computed gradients and a learning rate.\n",
+    "\n",
+    "<img src='./Notes_Images/update_weight.png'>\n"
    ]
   }
  ],
