docs: backpropagation cont

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -1740,6 +1740,20 @@
     "\n",
     "<img src='./Notes_Images/update_weight.png'>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24b0f93a",
+   "metadata": {},
+   "source": [
+    "### **`mlp.cpp`**\n",
+    "\n",
+    "Now we will implement the Backpropagation algorithm in the `mlp.cpp` file. This will involve defining the forward pass, loss computation, backward pass, and weight update steps as described in the previous sections.\n",
+    "\n",
+    "```C++\n",
+    "\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
